fix white space issue for text-only sentences

--- a/app/assets/stylesheets/coughdrop.css.scss
+++ b/app/assets/stylesheets/coughdrop.css.scss
@@ -646,6 +646,7 @@ footer .wide_links {
         display: none;
       }
       .text {
+        white-space: pre;
         display: inline;
         &.modeled {
           text-decoration: underline;
